test/tests/stages/16_characters_and_strings/valid/strings_as_lvalues/simple.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CString: 
                      CStringLiteral: 
                        List[13]: 
                          TChar: 72
                          TChar: 101
                          TChar: 108
                          TChar: 108
                          TChar: 111
                          TChar: 44
                          TChar: 32
                          TChar: 87
                          TChar: 111
                          TChar: 114
                          TChar: 108
                          TChar: 100
                          TChar: 33
                      None: 
                    None: 
                  Pointer: 
                    Char: 
                  None: 
            CS: 
              CReturn: 
                CSubscript: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
